[tool.poetry]
name = "image-clustering"
version = "0.1.0"
description = ""
authors = ["wakadorimk2 <moriyamakensetsu@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
scikit-image = "^0.22.0"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
cucim = "^23.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
