[tool.poetry]
name = "image-clustering"
version = "0.1.0"
description = ""
authors = ["wakadorimk2 <moriyamakensetsu@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
cupy-cuda11x = "^12.3.0"
torch = "^2.1.2"
torchaudio = "^2.1.2"
torchvision = "^0.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
