[tool.poetry]
name = "image-clustering"
version = "0.1.0"
description = ""
authors = ["wakadorimk2 <moriyamakensetsu@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.1"
pillow = "^10.2.0"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
torch = "^2.1.2"
torchvision = "^0.16.2"
torchaudio = "^2.1.2"
transformers = "^4.36.2"
datasets = "^2.16.1"
openai = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
